# mcp-auditor

./: .env.example  .gitignore  .mcp-auditor.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  langgraph.json  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/design-patrol/: SKILL.md
.claude/skills/patrol/: SKILL.md
.claude/skills/standards/: SKILL.md
.github/workflows/: ci.yml  cve-calibration.yml  eval-command.yml  evals.yml  publish.yml
docs/adr/: 001-why-langgraph.md  002-hexagonal-architecture.md  003-testing-philosophy.md  004-mcp-threat-model.md  005-llm-model-selection.md  006-judge-evaluation-strategy.md  007-e2e-eval-case-export.md  008-owasp-mcp-mapping.md  009-cross-tool-learning.md  010-multi-step-attack-chains.md  011-instrumented-observation-deferred.md  012-owasp-computed-field.md
docs/demo/: demo.tape
evals/: cve_environments.py  cve_oracle.py  cve_seeding.py  cve_targets.py  export.py  ground_truth.py  judge_metrics.py  metrics.py  run_cve_benchmark.py  run_evals.py  run_judge_eval.py
evals/docker/: Dockerfile.fetch  Dockerfile.filesystem  Dockerfile.git  Dockerfile.kubernetes  Dockerfile.sentinel  compose.yml
evals/fixtures/: judge_cases.json
evals/ground_truth/: chain_honeypot.yaml
plans/: 2026-03-16_domain-models-and-ports.md  2026-03-16_honeypot-and-mcp-client.md  2026-03-16_langgraph-orchestration.md  2026-03-16_llm-adapter.md  2026-03-17_cli-streaming-checkpointing.md  2026-03-17_evals.md  2026-03-18_real-server-readme.md  2026-03-19_devx-config-langsmith.md  2026-03-19_eval-improvements.md  2026-03-20_e2e-case-export.md  2026-03-20_rich-ux-overhaul.md  2026-03-21_cli_ux_improvements.md  2026-03-21_tools-filter.md  2026-03-22_owasp-mapping.md  2026-03-23_cross_tool_learning.md  2026-03-30_multi_step_chains.md  2026-07-06_cve_benchmark.md  2026-07-06_eval_command.md  2026-07-08_dockerized_cve_benchmark.md  2026-07-09_fix-tool-name-hallucination.md  2026-07-10_cve-calibration-ci-gate.md
src/mcp_auditor/: cli.py  config.py  config_file.py  console.py  progress.py  stream_handler.py  studio.py
src/mcp_auditor/adapters/: __init__.py  llm.py  mcp_client.py
src/mcp_auditor/domain/: __init__.py  category_guidance.py  models.py  owasp.py  ports.py  rendering.py
src/mcp_auditor/graph/: __init__.py  builder.py  (+5 more)
tests/: chain_honeypot_server.py  dummy_server.py  subtle_server.py
tests/fakes/: __init__.py  llm.py  mcp_client.py
tests/integration/: test_chain_honeypot.py  test_mcp_client.py  test_subtle_server.py
tests/unit/: test_chain_models.py  test_chain_nodes.py  test_chain_prompts.py  test_cli.py  test_cli_config_file.py  test_config.py  test_config_file.py  test_console.py  test_console_display.py  test_console_findings.py  test_console_given.py  test_console_pure_functions.py  test_cve_calibration.py  test_cve_oracle.py  test_cve_seeding.py  test_eval_metrics.py  test_export.py  test_graph.py  test_graph_given.py  test_graph_then.py  test_judge_metrics.py  test_llm_adapter.py  test_models.py  test_nodes.py  test_nodes_given.py  test_owasp.py  test_ports.py  test_progress.py  test_prompts.py  test_rendering.py
(+21 files in other folders)
