[project]
name = "mcp-auditor"
version = "0.1.0"
description = "Agentic QA & fuzzing CLI for MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-core>=1.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "click>=8.1",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
    "pyright>=1.1",
]

[project.scripts]
mcp-auditor = "mcp_auditor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auditor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
